Minor formatting changes

--- a/MannWhitneyU-Clean.ipynb
+++ b/MannWhitneyU-Clean.ipynb
@@ -2,27 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from scipy import stats     #scipy sin statistikkpakke gir oss funksjonen for å regne Mann-Whitney U-test\n",
+    "# Litt administrativt\n",
+    "\n",
+    "from scipy import stats     #scipy sin statistikkpakke gir oss funksjonen \n",
+    "                            # for å regne Mann-Whitney U-test\n",
+    "\n",
     "import numpy as np          #numpy er nødvendig for å regne med matriser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "table {float:left}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html                      \n",
+    "<style>\n",
+    "table {float:left}\n",
+    "</style>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Definerer en funksjon som gjennomfører Mann-Whitney U-test for en gitt dimensjon og dens tilhørende data,\n",
-    "# og returnerer noen setninger om resultatet. Dersom p_verdi er mindre eller lik enn tallet angitt som toleranse, får du melding\n",
+    "# Definerer en funksjon som gjennomfører Mann-Whitney U-test for en gitt\n",
+    "# dimensjon og dens tilhørende data, og returnerer noen setninger om resultatet. \n",
+    "# Dersom p_verdi er mindre eller lik enn tallet angitt som toleranse, får du melding\n",
     "# om at P-verdien er lav nok til at funnet er signifikant.\n",
+    "\n",
     "def MWU_Test(dimensjon, data, toleranse):\n",
     "    U,p_verdi = stats.mannwhitneyu(data[0],data[1],use_continuity=True)\n",
     "    output   =   [\"Resultater, dimensjon \" + str(dimensjon)]\n",
@@ -41,8 +76,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Her laster vi inn data fra CSV. Vår testfil heter nytestdata.csv og ligger i katalogen sammen med scriptet. Det er i bunn og grunn en tekstfil, som ser slik ut:\n",
-    "\n",
+    "Her laster vi inn data fra CSV. Vår testfil heter nytestdata.csv og ligger i katalogen sammen med scriptet. Det er i bunn og grunn en tekstfil, som ser slik ut:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "|Utadventhet| Flyte-evne | Dyrevern | Sjonglering | Populasjon|\n",
     "|-----------|------------|----------|-------------|-----------|\n",
     "|    3      |     2      |    1     |     10      |     A     |\n",
@@ -54,14 +94,19 @@
     "| 1 | 10 | 8 | 6 | A |\n",
     "| 8 | 5 | 8 | 8 | B |\n",
     "| 7 | 3 | 2 | 5 | A |\n",
-    "| 8 | 6 | 1 | 2 | B |\n",
-    "\n",
-    "Jeg har laget et par egne personlighetsdimensjoner, som jeg mener kan være flotte prediktorer. Den siste kollonnen setter en kandidat i enten gruppe A eller gruppe B.\n"
+    "| 8 | 6 | 1 | 2 | B |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jeg har laget et par egne personlighetsdimensjoner, som jeg mener kan være flotte prediktorer. Den siste kollonnen setter en kandidat i enten gruppe A eller gruppe B."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -95,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -104,21 +149,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultater, dimensjon Sjonglering\n",
-      "Mann-Whitney U-verdien for gruppene er: 14.0\n",
-      "P-verdien for resultatet antatt en normalfordeling er: 0.29 sett opp mot en toleranse på 0.05\n",
-      "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
-      "\n",
-      "\n",
-      "Resultater, dimensjon Dyrevern\n",
-      "Mann-Whitney U-verdien for gruppene er: 15.0\n",
-      "P-verdien for resultatet antatt en normalfordeling er: 0.34 sett opp mot en toleranse på 0.05\n",
-      "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
-      "\n",
-      "\n",
       "Resultater, dimensjon Utadventhet\n",
       "Mann-Whitney U-verdien for gruppene er: 17.5\n",
       "P-verdien for resultatet antatt en normalfordeling er: 0.50 sett opp mot en toleranse på 0.05\n",
+      "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
+      "\n",
+      "\n",
+      "Resultater, dimensjon Sjonglering\n",
+      "Mann-Whitney U-verdien for gruppene er: 14.0\n",
+      "P-verdien for resultatet antatt en normalfordeling er: 0.29 sett opp mot en toleranse på 0.05\n",
       "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
       "\n",
       "\n",
@@ -127,19 +166,35 @@
       "P-verdien for resultatet antatt en normalfordeling er: 0.11 sett opp mot en toleranse på 0.05\n",
       "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
       "\n",
+      "\n",
+      "Resultater, dimensjon Dyrevern\n",
+      "Mann-Whitney U-verdien for gruppene er: 15.0\n",
+      "P-verdien for resultatet antatt en normalfordeling er: 0.34 sett opp mot en toleranse på 0.05\n",
+      "P-verdien er ikke lav nok til å avvise nullhypotesen.\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "alle_resultater = []\n",
-    "for k, v in grunnlag.items():\n",
-    "    alle_resultater.append((list(MWU_Test(k,v,0.05))))\n",
+    "# Lager en liste over resultatene av MWU-testene for alle dimensjoner\n",
+    "alle_resultater = [MWU_Test(dimensjon,data,0.05) for dimensjon,data in grunnlag.items()]\n",
+    "\n",
+    "#Skriver ut alle resultatene. Det er også mulig å skrive disse til fil.\n",
     "\n",
     "for dimensjoner in alle_resultater:\n",
     "    for resultater in dimensjoner:\n",
     "        print(resultater)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
